2007-09-05  Michael Hutchinson <mhutchinson@novell.com> 

	* Project/XspParameters.cs: Fix some compile warnings.
	* Templates/CodeBehindWebHandler.xft.xml, Templates/EmptyWebForm.xft.xml,
	  Templates/CodeBehindWebControl.xft.xml,
	  Templates/CodeBehindWebService.xft.xml,
	  Templates/CodeBehindWebForm.xft.xml,
	  Templates/MasterPageWithNoCodeBehind.xft.xml,
	  Templates/MasterPageWithCodeBehind.xft.xml,
	  Templates/EmptyWebHandler.xft.xml, Templates/WebApplication.xpt.xml,
	  Templates/EmptyWebControl.xft.xml, Templates/EmptyWebService.xft.xml:
	  Use partial classes where possible. Default to deploying ASP.NET files
	  rather than building them. Remove "Hello world" code. Default to 2.0
	  runtime.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* Gui/AspNetConfigurationPanel.cs, Gui/AspNetConfigurationPanelWidget.cs,
	  Gui/XspOptionsPanel.cs: Changes due to new property infrastructure.

2007-08-31  Ankit Jain  <jankit@novell.com>

	* Templates/WebApplication.xpt.xml: Set BuildAction for aspx file to
	FileCopy.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetAddIn.addin.xml, AspNetAddIn.mdp, Makefile.am: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-08-01  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* AspNetAppProject.cs: Fix the IDeployable implementation. The target
	  directory names should be handled by an ASP.NET-specific
	  IDirectoryResolver, not the GetDeployFiles method.

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetAddIn.mdp: Updated.

2007-06-19  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* Project/CodeBehind.cs: Oops, remove some development code in which 
	  caused sharing violations.

2007-06-19  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/AspNetAddIn.AspNetConfigurationPanelWidget.cs,
	  AspNetAddIn.mdp: Changed some old 2.4 dependencies to 2.8. Use
	  GettextCatalog for localizable strings.
